# netra-refund-agent

./: .env.example  README.md  docker-compose.yml  package-lock.json  run-failed-simulation.ps1  run-simulation-1.ps1  run-simulation-2.ps1  run-simulation.ps1  start-testrun.sh
backend/: .dockerignore  .env.example  Dockerfile  agent-tools.py  agent.py  db.py  evaluate.py  init_db.py  main.py  push.py  pyproject.toml  tools.py  utils.py
backend/app/: config.py  dependencies.py  evaluate.py  main.py
backend/app/agent/: agent-tools.py  graph.py  llm.py  prompts.py  tools.py
backend/app/db/: connections.py
backend/app/db/migrations/: migration-v1.0.6.sql  migration-v1.0.8.sql  migration-v1.0.9.sql  migration-v1.1.0.sql
backend/app/models/: orders.py  products.py  refunds.py  threads.py  tickets.py  users.py
backend/app/routers/: auth.py  chat.py  orders.py  simulations.py  users.py
backend/app/schemas/: auth.py  chat.py  orders.py  products.py  refunds.py  tickets.py  users.py
backend/app/scripts/: push.py
backend/migrations/: migration-v1.0.0.sql  migration-v1.0.1.sql  migration-v1.0.2.sql  migration-v1.0.3.sql  migration-v1.0.4.sql  migration-v1.0.5.sql  migration-v1.0.7.sql  migration-v1.2.0.sql  migrations-v1.0.4.sql
backend/models/: orders.py  policies.py  products.py  refunds.py  tickets.py  users.py
backend/policy/: policy-v1.0.0.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: OrderCard.tsx  ProductCard.tsx  ask-assistant-dialog.tsx  (+3 more)
(+5 files in other folders)
