[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.7",
    "netra-sdk>=0.1.65",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
]
