[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-litellm>=0.4.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "netra-sdk",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
]

[tool.uv.sources]
netra-sdk = { path = "netra-sdk-py-develop.zip" }
